--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
         </div>
 
         <ul>
-            <li><a href="#">Inscreva-se no Curso</a></li>
-
-            <li><a href="#">Baixe meu e-book</a></li>
-
             <li><a href="https://github.com/guimaraes-lucas" target="_blank">Veja meu Portifólio</a></li>
+            
+            <li><a href="#">Em Breve...</a></li>
 
-            <li><a href="#">Conheça o Universo</a></li>
+            <li><a href="#">Em Breve...</a></li>
+
+            <li><a href="#">Em Breve...</a></li>
         </ul>
 
         <div id="social-links">
@@ -48,7 +48,7 @@
     </div>
 
     <footer>
-        Feito com <ion-icon name="heart"></ion-icon> pela <a href="https://rocketseat.com.br">Rocketseat</a>
+        2023
     </footer>
     
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
